--- a/lengua_house/templates/home.html
+++ b/lengua_house/templates/home.html
@@ -4,8 +4,8 @@
 
 {% block content %}
 <div class="text-center">
-    <h1>Welcome to Our Tutoring Website</h1>
-    <p class="lead">Learn from the best tutors online.</p>
+    <h1>Welcome to Lengua House</h1>
+    <p class="lead">Serving Grade 9s in Spanish and French.</p>
     <a href="{% url 'bookings' %}" class="btn btn-primary">Book a Session</a>
 </div>
 {% endblock %}
