Add bookings html and update views and urls.

--- a/lengua_house/templates/about.html
+++ b/lengua_house/templates/about.html
@@ -6,6 +6,6 @@
 <div class="text-center">
     <h1>About the Tutor</h1>
     <p class="lead">Learn more about the tutor.</p>
-    <a href="{% url 'bookings' %}" class="btn btn-primary">Book a Session</a>
+    <a href="{% url 'book_slot' %}" class="btn btn-primary">Book a Session</a>
 </div>
 {% endblock %}
