--- a/lengua_house/templates/home.html
+++ b/lengua_house/templates/home.html
@@ -6,6 +6,6 @@
 <div class="text-center">
     <h1>Welcome to Lengua House</h1>
     <p class="lead">Serving Grade 9s in Spanish and French.</p>
-    <a href="{% url 'bookings' %}" class="btn btn-primary">Book a Session</a>
+    <a href="{% url 'book_slot' %}" class="btn btn-primary">Book a Session</a>
 </div>
 {% endblock %}
